@@ -96,9 +96,11 @@ CREATE TABLE user (
   mode_lv enum('Y','N') NOT NULL default 'N',
   mode_lw enum('Y','N') NOT NULL default 'N',
   mode_lx enum('Y','N') NOT NULL default 'N',
+  mode_lz enum('Y','N') NOT NULL default 'N',
   mode_ua enum('Y','N') NOT NULL default 'N',
   mode_ub enum('Y','N') NOT NULL default 'N',
   mode_uc enum('Y','N') NOT NULL default 'N',
+  mode_ud enum('Y','N') NOT NULL default 'N',
   mode_ug enum('Y','N') NOT NULL default 'N',
   mode_uh enum('Y','N') NOT NULL default 'N',
   mode_un enum('Y','N') NOT NULL default 'N',
